--- a/exercicios/ex003/index.html
+++ b/exercicios/ex003/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Fasticon-Line-Free-Desktop.128.png" type="image/x-icon">
-    <title>Testando Carga de imagens  </title>
+    <title>Testando Carga de Imagens  </title>
 </head>
 <body>
-    <h1>Testando Carga De Imagens E icones FAVICON</h1>
+    <h1>Testando Carga De Imagens e Icones FAVICON</h1>
     <p>Abaixo você vai ver uma imagem que está na mesma pasta.&#x1F632;</p>  
     <img src="logo-html.png" alt="Logo HTML5">
     <p>Podemos também carregar imagens que estão em outra pasta,contanto que ela esteja na pasta atual. &#x1F5BC&#xFE0F;</p> 
