--- a/exercicios/ex022/imgfundo.html
+++ b/exercicios/ex022/imgfundo.html
@@ -15,13 +15,13 @@
             border-radius: 20px;    
         }
         div#q1 {
-            background-color: skyblue;
+            background-color: rgb(129, 76, 227);
         }
         div#q2 {
-            background-image: linear-gradient(to left, yellow, orange);
+            background-image: linear-gradient(to left, rgb(0, 238, 255), rgb(0, 255, 55));
         }
         div#q3 {
-            background-image:url(imagens/pattern003\ \(1\).png)
+            background-image:url(imagens/pattern003\.png)
         }
     </style>
 </head>
