--- a/exercicios/ex021/caixa01.html
+++ b/exercicios/ex021/caixa01.html
@@ -53,6 +53,6 @@
 </head>
 <body>
     <h1>Exempço de caixa box-level</h1>
-    <p>Parágrafod tembém são exemplos de box-çeveç,mas os <a href="#">links são exemplos de caixas inline-level</a>. Vmos ver como tudo isso funciona.</p>
+    <p>Parágrafo também são exemplos de box-level,mas os <a href="#">links são exemplos de caixas inline-level</a>. Vmos ver como tudo isso funciona.</p>
 </body>
 </html>
