--- a/exercicios/ex021/caixa02.html
+++ b/exercicios/ex021/caixa02.html
@@ -86,7 +86,7 @@
         </section>
     </main>   
     <footer>
-        <p>Desenvolvido por Rodrigues</p>
+        <p>Desenvolvido por Adailton Rodrigues</p>
     </footer>   
 </body>
 </html>
