--- a/exercicios/ex020/pseudoclasse.html
+++ b/exercicios/ex020/pseudoclasse.html
@@ -14,7 +14,7 @@
             width: 200px;
         }
         div:hover {
-            background-color: yellow;
+            background-color: rgb(255, 0, 0);
         }
     </style>
 </head>
