--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagens De Fundos</title>
+    <title>Personalização dos Fundos</title>
     <style>
         body{
             background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
             background-repeat: repeat;
+            background-size: 100px 100px;
+            background-repeat: repeat-x;
+
         }
     </style>
 </head>
