--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -28,5 +28,15 @@
         Vou dizer tudo em poesia.
         <br>
     </section>
+
+    <section class="imagem" id="img01">
+        Não é mais como era antes
+        É tudo abreviado
+        "Você" só tem duas letras
+        O "O" e o "E" foi riscado
+        Para declarar o amor
+        Basta botar uma flor
+        E um coração desenhado.
+    </section>
 </body>
 </html>
