--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743]" target="_blank">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
 
     <section class="normal">
@@ -31,12 +31,19 @@
 
     <section class="imagem" id="img01">
         Não é mais como era antes
+        <br>
         É tudo abreviado
+        <br>
         "Você" só tem duas letras
+        <br>
         O "O" e o "E" foi riscado
+        <br>
         Para declarar o amor
+        <br>
         Basta botar uma flor
+        <br>
         E um coração desenhado.
+        <br>
     </section>
 </body>
 </html>
