--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cordel</title>
+    <title>Cordel Moderno</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -44,6 +44,87 @@
         <br>
         E um coração desenhado.
         <br>
+    </section>
+
+    <section class="normal">
+        Arroba agora não pesa
+        <br>
+        É parte de um endereço
+        <br>
+        Ponto final nem se usa
+        <br>
+        Ou vai até no começo
+        <br>
+        Agora é .com
+        <br>
+        Se o saite é muito bom
+        <br>
+        Ele vale um alto preço.
+        <br>
+        <br>
+        Pra piorar a liguagem
+        <br>
+        O emoticom é um risco
+        <br>
+        Tem símbolo para tudo
+        <br>
+        Ponto e vírgula e um asterisco
+        <br>
+        Um beijo significa
+        <br>
+        Pra entender como fica
+        <br>
+        Decifre esse rabisco.
+        <br>
+    </section>
+    
+    <section class="imagem" id="img02">
+        Tenho saudade das cartas
+        <br>
+        Escritas com a própria mão
+        <br>
+        Mandava no mês de Junho
+        <br>
+        Só chegava no Verão
+        <br>
+        Mas matava a saudade
+        <br>
+        Era texto de verdade
+        <br>
+        Nas linhas do coração.
+        <br>
+    </section>
+
+    <section class="normal">
+        Agora, escrevo e envio
+        <br>
+        Chegando na mesma hora
+        <br>
+        Mas quando vou prosear
+        <br>
+        A pessoa foi embora
+        <br>
+        Abriu outro aplicativo
+        <br>
+        O mundo ficou cativo
+        <br>
+        Da tecnologia do agora.
+        <br>
+        <br>
+        Felizmente, pra orar
+        <br>
+        Não precisa de internet
+        <br>
+        Deus escuta todo mundo
+        <br>
+        Se quiser, faça esse teste
+        <br>
+        Dois pontos são dois joelhos
+        <br>
+        Seus lábios são aparelhos
+        <br>
+        Deixe que Deus interprete.
+        <br>       
     </section>
 </body>
 </html>
