--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -13,20 +13,22 @@
     </header>
 
     <section class="normal">
-        Estou ficando cansado
-        <br>
-        Da tal tecnologia
-        <br>
-        Só se fala por e-mail
-        <br>
-        Mensagem curta e fria
-        <br>
-        Twitter e Facebook
-        <br>
-        Antes que eu caduque
-        <br>
-        Vou dizer tudo em poesia.
-        <br>
+        <p>
+            Estou ficando cansado
+            <br>
+            Da tal tecnologia
+            <br>
+            Só se fala por e-mail
+            <br>
+            Mensagem curta e fria
+            <br>
+            Twitter e Facebook
+            <br>
+            Antes que eu caduque
+            <br>
+            Vou dizer tudo em poesia.
+            <br>
+        </p>
     </section>
 
     <section class="imagem" id="img01">
@@ -126,5 +128,8 @@
         Deixe que Deus interprete.
         <br>       
     </section>
+    <footer>
+        Site criado por <strong>Adailton Rodrigues</strong> para o <a href="">CursoemVideo </a>
+    </footer>
 </body>
 </html>
