--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -137,7 +137,7 @@
         </p>       
     </section>
     <footer>
-        Site criado por <strong>Adailton Rodrigues</strong> para o <a href="">CursoemVideo </a>
+        Site criado por <strong>Adailton Rodrigues</strong> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo </a>
     </footer>
 </body>
 </html>
