adicionei imagem  no style

--- a/Desafios/mp01/index.html
+++ b/Desafios/mp01/index.html
@@ -24,7 +24,7 @@
         </p>
     </section>
    
-    <section class="imagem">
+    <section class="imagem" id="imagem01">
         <p>
             Uma juventude robotizada, <br>
             “Gigabytes” de memória aguçada, <br>
@@ -42,7 +42,7 @@
         </p>
     </section>
    
-    <section class="imagem">
+    <section class="normal" >
         <p>
             E com isso a imaginação é congelada, <br>
             Parada, obstruída... Assassinada. <br>
@@ -51,7 +51,7 @@
         </p>
     </section>
   
-    <section class="normal">
+    <section class="imagem" id="imagem02">
         <p>
             Poesias no computador são digitadas, <br>
             Não existem mais rascunhos com palavras riscadas. <br>
@@ -67,9 +67,9 @@
             em casa na presença de minha mãe e um amigo. <br>
         </p>
     </section>  
-    https://color.adobe.com/pt/search?q=tecnology
+    
     <footer>
-        Site criado por <a href="">AdailtonRodrigo</a>
+        <p>Site criado por <a href="">AdailtonRodrigo</a></p> 
     </footer>
 </body>
 </html>
