--- a/Desafios/mp01/index.html
+++ b/Desafios/mp01/index.html
@@ -62,9 +62,9 @@
     
     <section class="normal">
         <p>
-            algo que eu estou vivenciando no momento <br>
-            mas eh muito estranho <br>
-            em casa na presença de minha mãe e um amigo. <br>
+            Algo que eu estou vivenciando no momento <br>
+            Mas eh muito estranho <br>
+            Em casa na presença de minha mãe e um amigo. <br>
         </p>
     </section>  
     
