--- a/Desafios/mp02/index.html
+++ b/Desafios/mp02/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Internet</title>
 </head>
 <body>
@@ -67,6 +68,10 @@
     </p>
     
     <p>E profundamente nos nos maguou.<br></p>
+
+    <footer>
+        <p>Site criado por <a href="">AdailtonRodrigo</a></p>
+    </footer>
    
 </body>
 </html>
