--- a/Desafios/mp02/index.html
+++ b/Desafios/mp02/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <h1>Internet, nosso Maravilhoso Mundo Novo Digital</h1>
-        <p>Por <a href="https://sitedepoesias.com/poetas/Patr%25C3%25ADcio%2BFranco" target="_blank">Patrício Franco</a></p>
+        <p>Por <a href="https://sitedepoesias.com/poetas/Patr%25C3%25ADcio%2BFranco" target="_blank">Patrício Franco</a>
+        </p>
         
     </header>
     
