--- a/Desafios/mp02/index.html
+++ b/Desafios/mp02/index.html
@@ -16,7 +16,8 @@
     
     <p>
         <p>
-            A Internet é o tão falado Maravilhoso Mundo Novo um dia explícito pela ficção científica e por<br> isto, em seus maravilhosos mares mágicos aonde vamos navegar, devemos sempre estar atentos, não<br> confiando cegamente em nossas emoções e acima de tudo, em nossas mais doces e puras ilusões.<br>
+            A Internet é o tão falado Maravilhoso Mundo Novo um dia explícito pela ficção científica e por<br> isto, em seus maravilhosos mares mágicos aonde vamos navegar, devemos sempre estar atentos, não<br>
+            confiando cegamente em nossas emoções e acima de tudo, em nossas mais doces e puras ilusões.<br>
 
         </p>
 
