--- a/Desafios/mp01/index.html
+++ b/Desafios/mp01/index.html
@@ -69,7 +69,7 @@
     </section>  
     
     <footer>
-        <p>Site criado por <a href="">AdailtonRodrigo</a></p> 
+        <p>Site criado por <a href="https://github.com/AdailtonRodrigo" target="_blank">AdailtonRodrigo</a></p> 
     </footer>
 </body>
 </html>
