--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        table {
+            width: 400px;
+            border-collapse: collapse;
+            border: solid 5px rgb(4, 0, 255);
+        }
+
+        tr.linha {
+            background-color: gray;
+        }
+
+        td {
+         border: solid 1px black;   
+        }
+
+        td.dado {
+            background-color: rgb(246, 255, 0);
+        }
+
+    
+    </style>
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
@@ -22,7 +43,7 @@
             <td>D1</td>
         </tr>
 
-        <tr>
+        <tr class="linha">
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
@@ -39,7 +60,7 @@
         <tr>
             <td>A4</td>
             <td>B4</td>
-            <td>C4</td>
+            <td class="dado">C4</td>
             <td>D4</td>
         </tr>
     </table>    
