--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabelas</title>
 </head>
 <body>
-    
+    <h1>Uso de tabelas grandes</h1>   
+     <!--
+        ANATOMIA PARA TABELAS GRANDES
+        TABLE
+            THEAD
+                TR,TD, TH
+            TBODY
+                TR,TD,TH
+            TFOOT
+                TR,TD,TH
+     -->
+
+     <table>
+        <thead>
+            
+        </thead>
+     </table>
 </body>
 </html>
