--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            width: 400px;
+            border-collapse: collapse;
+        }
+
+        td , th {
+            border: 1px solid black ;
+            padding: 2px;
+        }
+
+        th {
+            background-color: gray;
+        }
+    </style>
 </head>
 <body>
     <h1>Uso de tabelas grandes</h1>   
@@ -20,8 +39,48 @@
 
      <table>
         <thead>
-            
+            <tr>
+                <th>Estado</th>
+                <th>População</th>
+            </tr>
         </thead>
+
+        <tbody>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+        </tbody>
+
+        <tfoot>
+            <tr>
+                <th>Total de população</th>
+                <td>0000</td>
+            </tr>
+        </tfoot>
      </table>
 </body>
 </html>
