--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -19,7 +19,7 @@
             padding: 2px;
         }
 
-        th {
+        thead , tfoot {
             background-color: gray;
         }
     </style>
@@ -46,16 +46,55 @@
         </thead>
 
         <tbody>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
+            <tr>
+                <td>São Paulo</td>
+                <td>45 973 190</td>
+            </tr>
+
+            <tr>
+                <td>Minas Gerais</td>
+                <td>21 322 692	</td>
+            </tr>
+
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td>17 219 679</td>
+            </tr>
+
+            <tr>
+                <td>Bahia</td>
+                <td>14 850 513</td>
+            </tr>
+
+            <tr>
+                <td>Paraná</td>
+                <td>11 824 665</td>
+            </tr>
+
+            <tr>
+                <td>Rio Grande Do Sul</td>
+                <td>11 229 915</td>
+            </tr>
+
+            <tr>
+                <td>Pernambuco</td>
+                <td>9 539 029</td>
+            </tr>
+
+            <tr>
+                <td>Ceará</td>
+                <td>9 233 656</td>
+            </tr>
+
+            <tr>
+                <td>Pará</td>
+                <td>8 664 306</td>
+            </tr>
+
+            <tr>
+                <td>Santa Catarina</td>
+                <td>8 058 447</td>
+            </tr>
             <tr></tr>
             <tr></tr>
             <tr></tr>
