--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -7,15 +7,16 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            font-size: 0.5em;
         }
 
         table {
-            width: 400px;
+            width: 200px;
             border-collapse: collapse;
         }
 
         td , th {
-            border: 1px solid black ;
+            border: 0.1px solid black ;
             padding: 2px;
         }
 
@@ -95,23 +96,87 @@
                 <td>Santa Catarina</td>
                 <td>8 058 447</td>
             </tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
+            <tr>
+                <td>Goiás</td>
+                <td>7 350 483	</td>
+            </tr>
+            
+            <tr>
+                <td>Maranhão</td>
+                <td>7 010 960	</td>
+            </tr>
+
+            <tr>
+                <td>Amazonas</td>
+                <td>4 281 209</td>
+            </tr>
+
+            <tr>
+                <td>Paraíba</td>
+                <td>4 145 040</td>
+            </tr>
+
+            <tr>
+                <td>Espírito Santo</td>
+                <td>4 102 129</td>
+            </tr>
+
+            <tr>
+                <td>Mato Grosso</td>
+                <td>3 836 399</td>
+            </tr>
+
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td>3 446 071</td>
+            </tr>
+
+            <tr>
+                <td>Piauí</td>
+                <td>3 375 646</td>
+            </tr>
+
+            <tr>
+                <td>Alagoas</td>
+                <td>3 220 104</td>
+            </tr>
+
+            <tr>
+                <td>Distrito Federal</td>
+                <td>2 982 815	</td>
+            </tr>
+
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td>2 901 895	</td>
+            </tr>
+
+            <tr>
+                <td>Sergipe</td>
+                <td>2 291 077</td>
+            </tr>
+
+            <tr>
+                <td>Rondônia</td>
+                <td>1 746 227</td>
+            </tr>
+
+            <tr>
+                <td>Tocantins</td>
+                <td>1 577 342</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td>880 631</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td>802 837</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td>716 793	</td>
+            </tr>
         </tbody>
 
         <tfoot>
