--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -23,6 +23,9 @@
         thead , tfoot {
             background-color: gray;
         }
+        td.num {
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -49,7 +52,7 @@
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td>45 973 190</td>
+                <td class="num">45 973 190</td>
             </tr>
 
             <tr>
