--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -30,6 +30,9 @@
         thead , tfoot {
             background-color: gray;
         }
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
+        }
         td.num {
             text-align: right;
         }
