--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 200px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td , th {
@@ -30,7 +31,13 @@
         thead , tfoot {
             background-color: gray;
         }
-        tbody > tr:nth-child(2n) {
+        
+        thead > tr > th {
+            position: sticky;
+            top: 0px;
+            background-color: gray;
+        }
+        tbody > tr:nth-child(even) {
             background-color: lightgray;
         }
         td.num {
