--- a/Desafios/Desafio013/Desafio13-1.html
+++ b/Desafios/Desafio013/Desafio13-1.html
@@ -6,15 +6,14 @@
     <title>Tabela</title>
     <style>
         body{
-            background-color: black;
             font-family: Arial, Helvetica, sans-serif;
         }
 
         td {
-            color: white;
             width: 50px;
-            border: 1px solid white;
-            
+            border: 1px solid rgb(0, 0, 0);
+            text-align: center; 
+            padding: 10px;
 
         }
     </style>
@@ -22,8 +21,31 @@
 <body>
     <table>
         <tr>
-            <td>A</td>
+            <td colspan="4">A</td>
+            <td rowspan="4">B</td>
+        </tr>
 
+        <tr>
+            <td rowspan="4">C</td>
+            <td>D</td>
+            <td>E</td>
+            <td>F</td>
+        </tr>
+
+        <tr>
+            <td>G</td>
+            <td>H</td>
+            <td>I</td>
+        </tr>
+
+        <tr>
+            <td>J</td>
+            <td>L</td>
+            <td>M</td>
+        </tr>
+
+        <tr>
+            <td colspan="4">N</td>
         </tr>
     </table>
 </body>
