--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -15,7 +15,6 @@
         th {
             border: 0.8px solid black;
             padding: 5px;
-            width: 200px;
         }
         td {
             border: 0.8px solid black;
@@ -34,10 +33,46 @@
 
         <tr>
             <td rowspan="3">Mulheres</td>
-            <td>Ana maria</td>
+            <td>Ana Maria Santos</td>
             <td>Alien</td>
             <td>Rambo</td>
             <td>Vingadores</td>
+        </tr>
+
+        <tr>
+            <td>Beatriz Souza</td>
+            <td>Hulk</td>
+            <td>Inception</td>
+            <td>Batman</td>
+        </tr>
+
+        <tr>
+            <td>Cláudia Melo</td>
+            <td>Oblivion</td>
+            <td>Matrix</td>
+            <td>Big Hero</td>
+        </tr>
+
+        <tr>
+            <td rowspan="3">Homens</td>
+            <td>Bruno Mendonça</td>
+            <td>Intocáveis</td>
+            <td>Amnésia</td>
+            <td>Gladiador</td>
+        </tr>
+
+        <tr>
+            <td>Daniel Lourenço</td>
+            <td>IWall-E</td>
+            <td>Oldboy</td>
+            <td>Dangal</td>
+        </tr>
+
+        <tr>
+            <td>Fabiano Mota</td>
+            <td>Star Wars 5</td>
+            <td>Taxi Driver</td>
+            <td>Toy Story</td>
         </tr>
     </table>    
 </body>
