--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -32,15 +32,15 @@
 
         <thead>
              <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
 
         <tbody>
             <tr>
-            <th rowspan="3">Mulheres</td>
+            <th rowspan="3" scope="rowgroup">Mulheres</th>
             <td>Ana Maria Santos</td>
             <td>Alien</td>
             <td>Rambo</td>
@@ -62,7 +62,7 @@
         </tr>
 
         <tr>
-            <th rowspan="3">Homens</td>
+            <th rowspan="3" scope="rowgroup">Homens</td>
             <td>Bruno Mendonça</td>
             <td>Intocáveis</td>
             <td>Amnésia</td>
@@ -84,7 +84,12 @@
         </tr>
         </tbody>
        
-
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <td>0</td>
+            </tr>
+        </tfoot>
         
     </table>    
 </body>
