--- a/Desafios/Desafio014.html
+++ b/Desafios/Desafio014.html
@@ -42,7 +42,9 @@
                 </tr>
             </caption>
         </thead>
-            <tr>
+           
+        <tbody>
+             <tr>
                 <th rowspan="4">Exatas</th>
                 <td>Matemática</td>
                 <td>0.0</td>
@@ -70,8 +72,31 @@
                 <td>0.0</td>
                 <td>0.0</td>
             </tr>
-        <tbody>
 
+            <tr>
+                <th colspan="4">Média de Exatas</th>
+                <td>0.0</td>
+            </tr>
+
+            <tr>
+                <th rowspan="2">Humanas</th>
+                <td>História</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+
+            <tr>
+                <td>Geografia</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+
+            <tr>
+                <th colspan="4">Média de Humanas</th>
+                <td>0.0</td>
+            </tr>
         </tbody>
 
     </table>
