--- a/Desafios/Desafio014.html
+++ b/Desafios/Desafio014.html
@@ -93,7 +93,7 @@
             </tr>
 
             <tr class="cor">
-                <th colspan="4" scope="row">Média de Humanas</th>
+                <th colspan="4" scope="">Média de Humanas</th>
                 <td>0.0</td>
             </tr>
         </tbody>
