--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicíos de Tabelas</title>
     <style>
-        table{
+        table {
             border-collapse: collapse;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        caption {
+            font-weight: bold;
         }
         td,th {
             border: 1px solid black;
             padding: 5px;
+        }
+
+        col.cnome{
+            background-color: lightgray;
+        }
+
+        col.csexo {
+            background-color: gray;
+        }
+
+        .lightgray {
+            background-color: lightgray;
         }
     </style>
 </head>
@@ -21,8 +38,7 @@
         <colgroup>
             <col class="cnome">
             <col class="csexo">
-            <col class="cidade">
-            <col class="cprof">
+            <col class="lightgray" span="2">
         </colgroup>
         <caption>Cadastro</caption>
         <tr>
