--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe{
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando uso de um iframe</h1> 
     
     <p>
-        Acesando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> para aprender a programar.
+        Acesando o site do
+        
+        <!-- Tamanho padrão 300x150 -->
+        <iframe src="https://www.cursoemvideo.com"><a href="https://www.cursoemvideo.com" target="_blank">Curso em Video</a>
+        </iframe> 
+
+        para aprender a programar.
     </p>
 
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"> também é muito legal</iframe></p>
+    <p>O repositório do gustavoguanabara
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0"> no <a href="https://gustavoguanabara.github.io/" target="_blank">GitHub</a>
+        </iframe>
+    </p>
 </body>
 </html>
