--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -10,7 +10,9 @@
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum corrupti unde id sapiente est atque voluptate voluptates? Ipsam provident dolor aliquam recusandae quos. Dolor omnis quo sint, ab expedita sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique velit assumenda libero quia eligendi exercitationem tempora ut? Velit vitae impedit quis qui blanditiis sint quam quia cupiditate deserunt temporibus. Sequi!</p>
 
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500px" width="500px">
+        <p>Infelizmente seu navegador não é compatvel</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam distinctio quos unde eius sed sapiente id eligendi possimus quo? Adipisci odio reiciendis minima quod animi quae explicabo. Expedita, natus ducimus.</p>
 </body>
