--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -23,8 +23,8 @@
 
     <ul>
         <li><a href="paginas-extras/pag001.html" target="iframe">Primeira página</a></li>
-        <li><a href="#">Segunda página</a></li>
-        <li><a href="#">Terceira página</a></li>
+        <li><a href="paginas-extras/pag002.html" target="iframe">Segunda página</a></li>
+        <li><a href="paginas-extras/pag003.html" target="iframe">Terceira página</a></li>
     </ul>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci earum, ducimus eaque nam, consectetur omnis repellendus necessitatibus voluptas corporis dolores pariatur qui deserunt veniam? Doloremque similique asperiores itaque hic praesentium! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda reprehenderit facere, consectetur corporis facilis quibusdam quo ad perspiciatis? Recusandae porro ut laborum quidem temporibus vero suscipit dolores! Explicabo, dicta laborum.</p>
