--- a/exercicios/ex024/paginas-extras/pag003.html
+++ b/exercicios/ex024/paginas-extras/pag003.html
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(145, 0, 0);
+            background-color: rgb(114, 17, 17);
             color: white;
         }
     </style>
 </head>
 <body>
-    <h1>Segunda página de exemplo</h1>
+    <h1>Terceira página de exemplo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum culpa voluptates atque harum consequuntur cupiditate, omnis optio repellendus, recusandae explicabo similique id ex deserunt! Explicabo sed veniam illum expedita ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut dolores magnam impedit explicabo consequuntur nam amet porro ut a dolorum neque dolorem natus voluptas doloribus necessitatibus, facilis minus similique laboriosam.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, aperiam corporis cumque illum dolorem magnam aliquid accusantium officiis eveniet tempore maiores ullam perferendis asperiores? Eaque blanditiis odit quisquam consequuntur voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati dicta voluptatum voluptates repellendus aspernatur accusantium minima assumenda fuga nihil modi totam placeat maiores, veritatis quis delectus asperiores libero cumque atque.</p>
 </body>
