--- a/exercicios/ex024/paginas-extras/pag002.html
+++ b/exercicios/ex024/paginas-extras/pag002.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: blue;
+            background-color: rgb(25, 25, 141);
             color: white;
         }
     </style>
