--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci earum, ducimus eaque nam, consectetur omnis repellendus necessitatibus voluptas corporis dolores pariatur qui deserunt veniam? Doloremque similique asperiores itaque hic praesentium! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda reprehenderit facere, consectetur corporis facilis quibusdam quo ad perspiciatis? Recusandae porro ut laborum quidem temporibus vero suscipit dolores! Explicabo, dicta laborum.</p>
 
-    <iframe id="tela" name="iframe"  >
+    <iframe id="tela" name="iframe" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam minima unde placeat voluptatem iure, officiis magnam explicabo, maiores nostrum illo, sequi in! Accusantium, ratione. Ex error velit id qui cumque.</p><img src='imagens/cursoemvideo.png'>" >
         <p>Infelizmenteseu navegador não é compatível.</p>
     </iframe>
 
