--- a/exercicios/ex024/iframe005.html
+++ b/exercicios/ex024/iframe005.html
@@ -11,6 +11,6 @@
 
     <iframe src="paginas-extras/pag005.html" referrerpolicy="no-referer" sandbox="allow-forms allow-same-origin allow-scripts">Seu navegador não é compativel com isso!</iframe>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque laborum esse quaerat quidem consequuntur repudiandae ut doloribus blanditiis sapiente. Debitis doloremque eos fugiat reprehenderit autem soluta quos dolorem magnam nemo!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque laborum esse quaerat quidem consequuntur repudiandae ut doloribus blanditiis sapiente. Debitis doloremque eos fugiat reprehenderit autem soluta quos dolorem magnam nemo! lor</p>
 </body>
 </html>
