--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -9,6 +9,11 @@
     <h1>exemplo de Formulário</h1> 
     <form action="cadastro.php" method="post" autocomplete="on">
         <fieldset>
+            <legend>Sexo</legend>
+            <input type="radio" name="sexo" id="isxmas"><label for="isxmas">Masculino</label><br>
+            <input type="radio" name="sexo" id="isxfem"><label for="isxfem">Feminino</label><br>
+        </fieldset>
+        <fieldset>
             <legend>Esportes favoritos</legend>
             <input type="checkbox" name="esbas" id="iesbas"><label for="iesbas">Basquete</label><br>
             <input type="checkbox" name="esbad" id="iesbad"><label for="iesbad">Badminton</label><br>
