--- a/exercicios/ex025/form008.html
+++ b/exercicios/ex025/form008.html
@@ -25,7 +25,7 @@
         <p>
             <label for="in1">Número 1:</label>
             <input type="number" name="n1" id="in1" min="0" max="50" required>
-            oninput
+            oninput=
         </p>
 
         <p>
