--- a/exercicios/ex025/form008.html
+++ b/exercicios/ex025/form008.html
@@ -24,13 +24,13 @@
     <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="in1">Número 1:</label>
-            <input type="number" name="n1" id="in1" min="0" max="50" required>
-            oninput="isoma"isoma.HTML = Nume
+            <input type="number" name="n1" id="in1" min="0" max="50" required oninput="isoma.innerHTML = Number(in1.value) + Number(in2.value)">
         </p>
-
+        
         <p>
             <label for="in2">Número 2:</label>
-            <input type="number" name="n2" id="in2" min="0" max="50" required>
+            <input type="number" name="n2" id="in2" min="0" max="50" required oninput="isoma.innerHTML = Number(in1.value) + Number(in2.value)">
+
         </p>
 
         <p>
