mq mobile first

--- a/Desafios/mp004/index.html
+++ b/Desafios/mp004/index.html
@@ -28,7 +28,7 @@
             text-decoration: none;
             color: white;
             padding: 10px;
-            te
+            
         }
     </style>
 </head>
@@ -37,7 +37,7 @@
 <hr>
     <ul>
         <li>
-            <a href="Autoboat/">Autoboat/</a>
+            <a href="Autoboat/">Autoboat</a>
         </li>
         <li>
             <a href="Bluetooth%20Externo%20485-v2I3.html">Bluetooth Externo 485-v2I3</a>
