--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opcão 1</a></li>
                 <li><a href="#">Opcão 2</a></li>
@@ -28,5 +32,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima incidunt perferendis impedit non reprehenderit, quo voluptates tempora doloribus officiis voluptatem iusto culpa fugit nam. Quidem architecto unde voluptatem debitis autem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis libero eius cupiditate exercitationem quaerat repellat ipsam! Ab voluptas, deserunt voluptatibus, ullam facere nesciunt beatae, iste doloribus perspiciatis tenetur dolor repudiandae.</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block'){
+                itens.style.display ='none'         
+            } else { 
+                itens.style.display = 'block'
+            }
+
+        }    
+    </script>    
 </body>
 </html>
