--- a/exercicios/freecode/exercicos/ex001.html
+++ b/exercicios/freecode/exercicos/ex001.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 
+<head>
+
+    <title>CatPhotoApp</title>
+</head>
+
 <body>
     <main>
         <h1>CatPhotoApp</h1>
@@ -44,16 +49,12 @@
                 <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
             </figure>
         </section>
-        <section>
-            <h2>Cat Form</h2>
-            <form action="https://freecatphotoapp.com/submit-cat-photo">
-                <label><input id="indoor" type="radio" name="indoor-outdoor"> Indoor</label>
-                <label><input id="outdoor" type="radio" name="indoor-outdoor"> Outdoor</label>
-                <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
     </main>
+    <footer>
+        <p>
+            No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
+        </p>
+    </footer>
 </body>
 
 </html>
